fix spacing of github info lists on project pages

--- a/assets/proj.css
+++ b/assets/proj.css
@@ -26,6 +26,16 @@ h4 { margin: 0.5em 0 0.7em }
 
 #info > div:first-child { border-left: none }
 
+#info ul { list-style-type: none
+	 ; text-align: center
+	 ; padding: 0
+	 ; margin: 0
+	 }
+
+#info li { padding: 0.2em 0
+	 ; margin: 0
+	 }
+
 #info > br.clear { clear: both }
 
 @media only screen and (max-device-width:480px) {
